--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,16 +11,34 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.container{
+  background-color: burlywood;
+  width: 500px;
+  border-radius: 20px;
+  padding: 50px;
+}
+.head{
+  font-size: 15px;
+  font-weight: 300;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+}
+.card{
+  width: 500px;
+  height: 250px;
+  background-color: coral;
+  border-radius: 10px;
+  color: black;
+  font-size: 25px;
+  font-weight: 1000;
+}
+.input{
+  display: flex;
+  flex-direction: column;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
